<resources>
    <string name="app_name">HikerManager</string>
    <string name="add">Add</string>
    <string name="home">Home Screen</string>
    <string name="search">Search</string>
    <string name="add_new_hike">Add new hike</string>
    <string name="name_of_the_hike">Name of the hike</string>
    <string name="enter_name_of_the_hike">Enter name of the hike…</string>
    <string name="location">Location</string>
    <string name="enter_location">Enter location…</string>
    <string name="date_of_the_hike">Date of the hike</string>
    <string name="enter_date_of_the_hike">Enter date of the hike…</string>
    <string name="parking_available">Parking available</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="length_of_the_hike">Length of the hike</string>
    <string name="difficulty_level">Difficulty level</string>
    <string name="description">Description</string>
    <string name="description_about_the_hike">Description about the hike…</string>
    <string name="error">Error</string>
    <string name="all_required_fields_must_be_filled">All required fields must be filled</string>
    <string name="ok">OK</string>
    <string name="confirmation">Confirmation</string>
    <string name="new_hike_will_be_added">New hike will be added</string>
    <string name="name">Name: …</string>
    <string name="location_success">Location: ...</string>
    <string name="date_of_the_hike_success">Date of the hike: ...</string>
    <string name="parking_available_success">Parking available: ...</string>
    <string name="length_of_the_hike_success">Length of the hike: ...</string>
    <string name="difficulty_level_success">Difficulty level: ...</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all">Delete All</string>
    <string name="edit_hike">Edit hike</string>
</resources>