<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:background="#F2F2F7"
        android:orientation="vertical"
        android:paddingVertical="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/confirmation"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/new_hike_will_be_added"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvNameConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvLocationConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/location_success"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvDateConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/date_of_the_hike_success"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvParkingAvailable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/parking_available_success"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvLengthConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/length_of_the_hike_success"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvDifficultyLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/difficulty_level_success"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/are_you_sure"
            android:textColor="@color/black"
            android:textSize="13sp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvYes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/yes"
                android:textColor="#0A7AFF"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="#0A7AFF"
                android:textSize="17sp" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>