<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/linearLayoutBar"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/add_new_hike"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/name_of_the_hike"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtNameHike"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_background_edittext_add"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/enter_name_of_the_hike"
                android:paddingStart="15dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtLocation"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_background_edittext_add"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/enter_location"
                android:paddingStart="15dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/date_of_the_hike"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtDateHike"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_background_edittext_add"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/enter_date_of_the_hike"
                android:paddingStart="15dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/parking_available"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <RadioGroup
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="60dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RadioButton
                        android:id="@+id/radioYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/black"
                        android:checked="true"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/radioNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/black"
                        android:text="@string/no" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_regular"
                    android:maxLines="1"
                    android:text="@string/length_of_the_hike"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edtLengthHike"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="70dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_background_edittext_add"
                    android:gravity="center"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/difficulty_level"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edtDifficultyLevel"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="70dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_background_edittext_add"
                    android:gravity="center" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtDescription"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_background_edittext_add"
                android:fontFamily="@font/montserrat_regular"
                android:paddingStart="20dp"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/imvAdd"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:src="@drawable/ic_add" />


        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:id="@+id/linearLayoutBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#DDD3D3"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/add"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvHome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/home"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/search"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>